[project]
name = "queuelink"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Connect and link one or more Queues together or to files"
readme = "README.rst"
authors = [{ name = "Andy Robb", email = "andy@andyrobb.com" }]
license = { file = "LICENSE.txt" }
keywords = ["utility"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
homepage = "https://github.com/arobb/python-queuelink"
repository = "https://github.com/arobb/python-queuelink"
documentation = "https://queuelink.readthedocs.io/en/latest/"

[build-system]
requires = [
    "setuptools >= 80 ; python_version >= '3.9'",
    "setuptools_scm[toml] >= 8.3.1 ; python_version >= '3.10'",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.test = {file = ["requirements-test.txt"]}
optional-dependencies.docs = {file = ["requirements-docs.txt"]}