[project]
name = "queuelink"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Connect and link one or more Queues together or to files"
readme = "README.rst"
authors = [{ name = "Andy Robb", email = "andy@andyrobb.com" }]
license = { file = "LICENSE.txt" }
keywords = [
    "queue",
    "multiprocessing",
    "threading",
    "concurrency",
    "pipeline",
    "fan-out",
    "pub-sub",
    "IPC",
    "producer-consumer",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.urls]
Documentation = "https://queuelink.readthedocs.io/en/latest/"
Homepage = "https://github.com/arobb/python-queuelink"
Repository = "https://github.com/arobb/python-queuelink"
Changelog = "https://github.com/arobb/python-queuelink/releases"

[build-system]
requires = [
    "setuptools >= 80 ; python_version >= '3.9'",
    "setuptools_scm[toml] >= 8.3.1 ; python_version >= '3.10'",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.test = {file = ["requirements-test.txt"]}
optional-dependencies.docs = {file = ["requirements-docs.txt"]}