[options]
name = queuelink
package_dir=
    =src
packages = find:
setup_requires =
    setuptools_scm

[options.packages.find]
where=src
include=queuelink

[tox:tox]
min_version = 4.0
envlist =
    clean
    py39
    py310
    py311
    py312
    py313
    report
    pylint
    bandit
ignore_basepython_conflict = true

[testenv]
platform = linux|darwin
setenv =
    VIRTUALENV_SYSTEM_SITE_PACKAGES = false
;    PIP_INDEX_URL = https://test.pypi.org/simple/
;    PIP_EXTRA_INDEX_URL = https://pypi.org/simple/
;    PIP_TRUSTED_HOST = localhost
;    PIP_INDEX_URL = http://localhost:3141/root/pypi/+simple/
commands =
    {envpython} -m pytest {tty:--color=yes} \
    --basetemp="{envtmpdir}" \
    --confcutdir=.. \
    --numprocesses auto \
    --cov \
    --cov-append \
    --cov-report term-missing \
    --cov-report xml \
    {posargs:-vv}
extras = test
deps =
    pytest-xdist
depends =
    {py37,py38,py39,py310,py311,py312,py313}: clean
    report: py37,py38,py39,py310,py311,py312,py313

[testenv:report]
skip_install = true
deps = coverage
commands =
    - {envpython} -m coverage combine
    {envpython} -m coverage html
    {envpython} -m coverage xml
    {envpython} -m coverage report

[testenv:clean]
deps = coverage
commands = {envpython} -m coverage erase

[coverage:run]
source =
    src/queuelink
    tests
omit = .tox/*
concurrency = multiprocessing
data_file = coverage/coverage
parallel = True

[coverage:html]
directory = coverage/html

[coverage:xml]
output = coverage/xml/coverage.xml

[testenv:pylint]
deps = pylint
commands =
    - {envpython} -m pylint src/queuelink

[pylint.BASIC]
good-names=
    i,
    id,

[pylint.'MESSAGES CONTROL']
disable=
    useless-object-inheritance,
    too-many-instance-attributes,
    too-many-public-methods,
    too-many-arguments,
    duplicate-code,
    raise-missing-from,

[testenv:bandit]
deps = bandit
commands =
    {envpython} -m bandit -r src

[testenv:docs]
description = Invoke sphinx-build to build the HTML docs
basepython = python3.13
extras = docs
commands = sphinx-build -d "{toxworkdir}/docs_doctree" docs "{toxworkdir}/docs_build" --color -W -bhtml {posargs}
           {basepython} -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_build" / "index.html"))'
