[options]
name = queuelink
package_dir=
    =src
packages = find:
setup_requires =
    setuptools_scm

[options.packages.find]
where=src
include=queuelink

[tox:tox]
min_version = 4.0
envlist =
    clean
    py39
    py310
    py311
    py312
    py313
    report
    pylint
    bandit
ignore_basepython_conflict = true

[testenv]
platform = linux|darwin
setenv =
    VIRTUALENV_SYSTEM_SITE_PACKAGES = false
;    PIP_INDEX_URL = https://test.pypi.org/simple/
;    PIP_EXTRA_INDEX_URL = https://pypi.org/simple/
;    PIP_TRUSTED_HOST = localhost
;    PIP_INDEX_URL = http://localhost:3141/root/pypi/+simple/
commands =
    # Run 1: fork-context tests in parallel via xdist. Safe to parallelize
    # because all tests use the fork start method, so there is no context
    # mismatch between xdist workers and the test processes they spawn.
    # Also covers any tests that are not parameterized by start method.
    {envpython} -m pytest {tty:--color=yes} \
    --basetemp="{envtmpdir}" \
    --confcutdir=.. \
    -n auto \
    --cov \
    --cov-append \
    -k "not forkserver and not spawn" \
    {posargs:-vv}
    # Run 2: forkserver and spawn tests run serially. xdist workers are
    # created using fork on Linux, which conflicts with spawn/forkserver
    # contexts — SemLocks created in a fork context cannot be shared with
    # processes started in a spawn or forkserver context.
    # Coverage reports are generated here after both runs have accumulated data.
    {envpython} -m pytest {tty:--color=yes} \
    --basetemp="{envtmpdir}" \
    --confcutdir=.. \
    --cov \
    --cov-append \
    --cov-report term-missing \
    --cov-report xml \
    -k "forkserver or spawn" \
    {posargs:-vv}
extras = test
deps =
    pytest-xdist
depends =
    {py37,py38,py39,py310,py311,py312,py313}: clean
    report: py37,py38,py39,py310,py311,py312,py313

[testenv:report]
skip_install = true
deps = coverage
commands =
    - {envpython} -m coverage combine
    {envpython} -m coverage html
    {envpython} -m coverage xml
    {envpython} -m coverage report

[testenv:clean]
deps = coverage
commands = {envpython} -m coverage erase

[coverage:run]
source =
    src/queuelink
    tests
omit = .tox/*
concurrency = multiprocessing
data_file = coverage/coverage
parallel = True

[coverage:paths]
# Map absolute paths from Linux and macOS CI runners to the local relative
# path so that 'coverage combine' can merge data from all matrix jobs.
# The first entry is the canonical path; subsequent entries are patterns
# that coverage maps to it. The wildcard form handles any runner workspace.
source =
    src/
    */python-queuelink/src/
tests =
    tests/
    */python-queuelink/tests/

[coverage:html]
directory = coverage/html

[coverage:xml]
output = coverage/xml/coverage.xml

[testenv:pylint]
deps = pylint
commands =
    - {envpython} -m pylint src/queuelink

[pylint.BASIC]
good-names=
    i,
    id,

[pylint.'MESSAGES CONTROL']
disable=
    useless-object-inheritance,
    too-many-instance-attributes,
    too-many-public-methods,
    too-many-arguments,
    duplicate-code,
    raise-missing-from,

[testenv:bandit]
deps = bandit
commands =
    {envpython} -m bandit -r src

[testenv:docs]
description = Invoke sphinx-build to build the HTML docs
basepython = python3.13
extras = docs
commands = sphinx-build -d "{toxworkdir}/docs_doctree" docs "{toxworkdir}/docs_build" --color -W -bhtml {posargs}
           {basepython} -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_build" / "index.html"))'
